# production-grade-agentic-ai

./: .gitignore  CLAUDE.md  README.md
04. Deploying Agents/: README.md
Section 01. Warming up/: README.md  challenge.md
Section 02. Background to Agentic AI/: README.md  ideSetup.md  promptEngineeringChallenge.md
Section 03. Hello Agentic/: README.md  challenge.md  pyproject.toml
Section 04. Deploying Agents/: .dockerignore  .env.template  Dockerfile  README.md  agentCoreConfigure.sh  agentCoreDeploy.sh  challenge.md  pyproject.toml
Section 04. Deploying Agents/src/emergingtechnologyresearch/: agentCoreHandler.py  run.py
Section 04. Deploying Agents/src/emergingtechnologyresearch/config/: researchAgents.yaml
Section 04. Deploying Agents/src/emergingtechnologyresearch/crews/: researchCrew.py
Section 05. Context Engineering(RAG)/: .env.template  README.md  challenge.md  pyproject.toml
Section 06. Integrations(MCP)/: .env.template  README.md  challenge.md
Section 06. Integrations(MCP)/miscellaneous/: publishToS3Function.py  publishToS3Schema.json
Section 07. Agent Memory/: .env.template  README.md  challenge.md
Section 08. Agentic Patterns/: .env.template  README.md  challenge.md  pyproject.toml
Section 09. Agent Evaluation/: .env.template  README.md  challenge.md  pyproject.toml
Section 09. Agent Evaluation/miscellaneous/: cognitoSetup.sh
Section 10. Inter-Agent(A2A)/: .env.template  README.md  challenge.md
Section 11. Agent Security/: .env.template  README.md  challenge.md  pyproject.toml
Section 11. Agent Security/src/emergingtechnologyresearch/: flow.py
Section 11. Agent Security/src/emergingtechnologyresearch/config/: criticTasks.yaml  followupAgents.yaml  followupTasks.yaml  intentTasks.yaml
Section 11. Agent Security/src/emergingtechnologyresearch/crews/: criticCrew.py  followupCrew.py  reportBannerCrew.py  researchCrew.py
Section 11. Agent Security/src/emergingtechnologyresearch/tools/: publishedTopicsTool.py
Section 11. Agent Security/src/emergingtechnologyresearch/utils/: crewUtils.py  env.py  publishedReportUtils.py
Section 12. Capstone - Orange Electronics Chatbot/: README.md  challenge.md
Section 12. Capstone - Orange Electronics Chatbot/agents/: pyproject.toml
Section 12. Capstone - Orange Electronics Chatbot/infrastructure/: app.py
Section 12. Capstone Project/: .gitignore
Section 12. Capstone Project/agents/: .env.template
Section 13. Capstone - Bug Fixer (Just Code)/: README.md
Section 13. Capstone - Bug Fixer (Just Code)/agents/: .env.template  pyproject.toml
Section 13. Capstone - Deep Research (Just Code)/: README.md
Section 13. Capstone - Deep Research (Just Code)/agents/: pyproject.toml
Section 13. Capstone - Deep Research (Just Code)/agents/src/agents/: agentCoreHandler.py
Section 13. Capstone - Deep Research (Just Code)/agents/src/agents/config/: deepResearchAgents.yaml
Section 13. Capstone - Deep Research (Just Code)/agents/src/agents/crews/: deepResearchFlow.py
Section 13. Capstone - Deep Research (Just Code)/agents/src/agents/utils/: guardrailUtils.py
Section 13. Capstone - Issue Fixer/: challenge.md
Section 13. Capstone - Issue Fixer (Just Code)/: README.md
Section 13. Capstone - Issue Fixer (Just Code)/agents/: pyproject.toml
Section 13. Capstone - Issue Fixer (Just Code)/agents/src/agents/crews/: issueFixerFlow.py  tools.py
Section 13. Capstone - Issue Fixer (Just Code)/agents/src/agents/utils/: llmUtils.py
Section 14. Capstone - Deep Research (Just Code)/: README.md
(+76 files in other folders)
