[project]
name = "emergingtechnologyresearch"
version = "0.1.0"
description = "emergingTechnologyResearch using crewAI"
authors = [
    { name = "DeepLens Tech", email = "support@deeplens.tech" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "a2a-sdk[http-server]>=0.3.11",
    "bedrock-agentcore>=0.1.5",
    "bedrock-agentcore-starter-toolkit>=0.1.14",
    "boto3>=1.40.35",
    "crewai-tools[mcp]>=0.76.0",
    "crewai[mcp,tools]>=0.186.1",
    "langfuse>=3.5.0",
    "litellm>=1.80.0",
    "openinference-instrumentation-crewai>=0.1.13",
    "openinference-instrumentation-litellm>=0.1.25",
    "openlit>=1.36.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "pymongo>=4.15.5",
    "rich>=14.2.0",
    "streamlit>=1.50.0",
    "termcolor>=3.2.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
